[package]
name = "aoc_day_02"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"
name = "aoc_day_02_lib"

[[bin]]
path = "src/main.rs"
name = "aoc_day_02"

[dependencies]
nom = "7.1.3"
rstest = "0.18.2"
